--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/node": "^16.18.61",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "country-flag-icons": "^1.5.9",
     "framer-motion": "^10.16.5",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
