Implement jwt login

--- a/src/configuration.local.json
+++ b/src/configuration.local.json
@@ -1,3 +1,4 @@
 {
-  "websocketURL": "http://localhost:3001"
+  "websocketURL": "http://localhost:3001",
+  "endpointURL": "http://localhost:3001"
 }
