server and client share types

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,8 @@
 {
   "compilerOptions": {
+    "paths": {
+      "@backend/*": ["../lars2_backend/src/sharedTypes/*"]
+    },
     "target": "es5",
     "lib": [
       "dom",
