--- a/package.json
+++ b/package.json
@@ -3,9 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
-    "@emotion/react": "^11.11.1",
+    "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
+    "@fontsource/roboto": "^5.0.8",
+    "@mui/icons-material": "^5.15.4",
+    "@mui/material": "^5.15.4",
     "@react-rxjs/core": "^0.10.7",
     "@react-rxjs/utils": "^0.9.7",
     "@testing-library/jest-dom": "^5.17.0",
@@ -20,7 +22,7 @@
     "ag-grid-react": "^31.0.1",
     "class-transformer": "^0.5.1",
     "country-flag-icons": "^1.5.9",
-    "framer-motion": "^10.16.5",
+    "formik": "^2.4.5",
     "i18next": "^23.7.6",
     "i18next-browser-languagedetector": "^7.2.0",
     "i18next-http-backend": "^2.4.1",
@@ -29,7 +31,6 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^13.4.1",
-    "react-icons": "^4.12.0",
     "react-router-dom": "6",
     "react-scripts": "5.0.1",
     "rxjs": "^7.8.1",
