--- a/package.json
+++ b/package.json
@@ -6,38 +6,39 @@
     "@emotion/react": "^11.11.3",
     "@emotion/styled": "^11.11.0",
     "@fontsource/roboto": "^5.0.8",
-    "@mui/icons-material": "^5.15.4",
-    "@mui/lab": "^5.0.0-alpha.161",
-    "@mui/material": "^5.15.4",
+    "@mui/icons-material": "^5.15.6",
+    "@mui/lab": "^5.0.0-alpha.162",
+    "@mui/material": "^5.15.6",
     "@react-rxjs/core": "^0.10.7",
     "@react-rxjs/utils": "^0.9.7",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
+    "@testing-library/jest-dom": "^6.2.1",
+    "@testing-library/react": "^14.1.2",
+    "@testing-library/user-event": "^14.5.2",
+    "@types/jest": "^29.5.11",
     "@types/jwt-simple": "^0.5.36",
-    "@types/node": "^16.18.61",
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
-    "ag-grid-community": "^31.0.1",
-    "ag-grid-react": "^31.0.1",
+    "@types/node": "^20.11.5",
+    "@types/react": "^18.2.48",
+    "@types/react-dom": "^18.2.18",
+    "ag-grid-community": "^31.0.2",
+    "ag-grid-react": "^31.0.2",
     "class-transformer": "^0.5.1",
     "country-flag-icons": "^1.5.9",
     "formik": "^2.4.5",
-    "i18next": "^23.7.6",
+    "i18next": "^23.7.18",
     "i18next-browser-languagedetector": "^7.2.0",
-    "i18next-http-backend": "^2.4.1",
+    "i18next-http-backend": "^2.4.2",
     "immer": "^10.0.3",
     "jwt-simple": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-i18next": "^13.4.1",
-    "react-router-dom": "6",
+    "react-i18next": "^14.0.1",
+    "react-router-dom": "6.21.3",
     "react-scripts": "5.0.1",
     "rxjs": "^7.8.1",
-    "socket.io-client": "^4.7.2",
-    "typescript": "^4.9.5",
-    "web-vitals": "^2.1.4",
+    "socket.io-client": "^4.7.4",
+    "typescript": "5.3.2",
+    "uid": "^2.0.2",
+    "web-vitals": "^3.5.1",
     "yup": "^1.3.3"
   },
   "devDependencies": {
