--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "i18next-http-backend": "^2.4.2",
     "immer": "^10.0.3",
     "jwt-simple": "^0.5.6",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^14.0.1",
